[gd_scene load_steps=14 format=3 uid="uid://dx2lto7swm1wm"]

[ext_resource type="Script" path="res://scenes/download.gd" id="1_x4dy5"]
[ext_resource type="Texture2D" uid="uid://dfvysekdfjhtn" path="res://graphics/title/download/circle_spin.png" id="3_ogffo"]
[ext_resource type="Theme" uid="uid://dphjscf0acfaw" path="res://themes/general.tres" id="4_33hvr"]
[ext_resource type="Texture2D" uid="uid://bxunaysknjqil" path="res://graphics/glow.png" id="5_tlaer"]

[sub_resource type="Animation" id="Animation_qdsih"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.527344, 0.996094, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spin:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.345098, 0.988235, 0.498039)]
}

[sub_resource type="Animation" id="Animation_ud0fo"]
resource_name = "fail"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.527344, 0.996094, 1), Color(1, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.345098, 0.988235, 0.498039), Color(0.988235, 0, 0, 0.498039)]
}

[sub_resource type="Animation" id="Animation_geyi2"]
resource_name = "success"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.527344, 0.996094, 1), Color(0.117647, 1, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spin:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.1, 0.1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.345098, 0.988235, 0.498039), Color(0.113725, 0.988235, 0, 0.498039)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ba5tu"]
_data = {
"RESET": SubResource("Animation_qdsih"),
"fail": SubResource("Animation_ud0fo"),
"success": SubResource("Animation_geyi2")
}

[sub_resource type="Animation" id="Animation_vipce"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_oa343"]
resource_name = "spin"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8q8p5"]
_data = {
"RESET": SubResource("Animation_vipce"),
"spin": SubResource("Animation_oa343")
}

[sub_resource type="InputEventAction" id="InputEventAction_rrfbi"]
action = &"ui_accept"

[sub_resource type="Shortcut" id="Shortcut_yix46"]
events = [SubResource("InputEventAction_rrfbi")]

[node name="Download" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x4dy5")

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true

[node name="ImageRequest" type="HTTPRequest" parent="."]
use_threads = true

[node name="JPGRequest" type="HTTPRequest" parent="."]
use_threads = true

[node name="Result" type="AnimationPlayer" parent="."]
root_node = NodePath("../CircleSpin")
libraries = {
"": SubResource("AnimationLibrary_ba5tu")
}

[node name="Image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -216.0
offset_right = 217.0
offset_bottom = 217.0
grow_horizontal = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 0.5
offset_top = -32.5
offset_right = 1048.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.345098, 0.988235, 0.498039)

[node name="CircleSpin" type="TextureRect" parent="."]
modulate = Color(0, 0.527344, 0.996094, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -52.5
offset_right = 52.5
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(52, 52)
texture = ExtResource("3_ogffo")

[node name="Spin" type="AnimationPlayer" parent="CircleSpin"]
libraries = {
"": SubResource("AnimationLibrary_8q8p5")
}

[node name="Process" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -13.0
offset_right = 58.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_33hvr")
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 51
text = " "

[node name="Load" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 61.0
offset_top = -94.0
offset_right = -28.0
offset_bottom = -85.0
color = Color(0.517647, 0.709804, 0.87451, 1)

[node name="LoadingBar" type="HBoxContainer" parent="Load"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Color" type="ColorRect" parent="Load/LoadingBar"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0.458824, 1, 1)

[node name="ParticleControl" type="Control" parent="Load/LoadingBar"]
layout_mode = 2

[node name="CPUParticles2D" type="CPUParticles2D" parent="Load/LoadingBar/ParticleControl"]
position = Vector2(-2, 5)
amount = 30
lifetime_randomness = 1.0
texture = ExtResource("5_tlaer")
emission_shape = 1
emission_sphere_radius = 2.35
gravity = Vector2(0, -245)
radial_accel_min = 40.25
radial_accel_max = 40.25
scale_amount_min = 0.0
scale_amount_max = 0.1
color = Color(0, 0.458824, 1, 1)

[node name="Progress" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = 222.0
offset_right = 192.0
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_33hvr")
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 21
text = "0%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Glow" type="Sprite2D" parent="Progress"]
modulate = Color(0, 0.458824, 1, 1)
show_behind_parent = true
position = Vector2(188.5, 25)
scale = Vector2(0.756944, 0.34965)
texture = ExtResource("5_tlaer")

[node name="Fade" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.733333)

[node name="Host" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 213.0
offset_top = -29.0
offset_right = -207.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="Go" type="Button" parent="Host"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.0
offset_top = 84.0
offset_right = 67.0
offset_bottom = 124.0
grow_horizontal = 2
shortcut = SubResource("Shortcut_yix46")
text = "Search"

[node name="cop" type="Button" parent="."]
layout_mode = 0
offset_left = 219.0
offset_top = 121.0
offset_right = 311.0
offset_bottom = 207.0
text = "gfo"

[node name="Host2" type="TextEdit" parent="."]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 882.0
offset_top = -313.0
offset_right = -13.0
offset_bottom = -123.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 61.0
offset_top = 14.0
offset_right = 167.0
offset_bottom = 49.0
text = "Exit"

[node name="FileDialog" type="FileDialog" parent="."]
mode = 3
title = "Open a File"
position = Vector2i(302, 36)
size = Vector2i(948, 623)
visible = true
ok_button_text = "Open"
file_mode = 0
access = 1

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="request_completed" from="ImageRequest" to="." method="_on_image_request_request_completed"]
[connection signal="request_completed" from="JPGRequest" to="." method="_on_jpg_request_request_completed"]
[connection signal="animation_finished" from="CircleSpin/Spin" to="." method="_on_spin_animation_finished"]
[connection signal="text_changed" from="Host" to="." method="_on_host_text_changed"]
[connection signal="pressed" from="Host/Go" to="." method="_on_go_pressed"]
[connection signal="pressed" from="cop" to="." method="_on_cop_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
